[package]
name = "go_back_n"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.2.8"
intbits = "0.1.1"
byteorder = "1.3.2"
rand = "0.7.2"
log = "0.4"
pretty_env_logger = "0.3"