[package]
name = "static_http_server"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3"
mime_guess = "2.0"
smallvec = "1.0"
http = "0.2.0"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.3"

[dependencies.async-std]
version = "1.3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.65"


[dev-dependencies]
